[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ConnectPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="LineEdit" parent="ConnectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -72.0
margin_right = 240.0
margin_bottom = -24.0
align = 1
placeholder_text = "Server IP"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinBtn" type="Button" parent="ConnectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 72.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostBtn" type="Button" parent="ConnectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 96.0
margin_right = 120.0
margin_bottom = 144.0
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LobbyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyPanel/MarginContainer"]
margin_right = 904.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="LobbyPanel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 392.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyPanel/MarginContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 904.0
margin_bottom = 480.0

[node name="Button" type="Button" parent="LobbyPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 63.0
margin_bottom = 80.0
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nickname" type="LineEdit" parent="LobbyPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 670.0
margin_bottom = 80.0
size_flags_horizontal = 3
align = 1
placeholder_text = "Set a nickname"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="LobbyPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 678.0
margin_right = 904.0
margin_bottom = 80.0
text = "Ready"

[node name="ConnectDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConnectDialog/VBoxContainer"]
margin_top = 287.0
margin_right = 1024.0
margin_bottom = 312.0
text = "Connecting..."
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_left = 60.0
margin_top = 60.0
margin_right = 964.0
margin_bottom = 540.0
window_title = "Error"
dialog_text = "Something went wrong."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="ConnectPanel/Address" to="." method="_on_Address_text_changed"]
[connection signal="pressed" from="ConnectPanel/JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="ConnectPanel/HostBtn" to="." method="_on_HostBtn_pressed"]
